src/main/metadata/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Chrysler Complaint Process</fullName>
        <description>Complaint Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Finished</fullName>
        </values>
        <values>
            <fullName>Have tracked</fullName>
        </values>
        <values>
            <fullName>Need track</fullName>
        </values>
        <values>
            <fullName>Waiting Process</fullName>
        </values>
        <values>
            <fullName>Waiting for Reply</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Inquiry Process</fullName>
        <description>Inquiry Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>MB Complaint Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting MB</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In progress</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>MBDA Complaint Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>In progress</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Processed</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>MBDA Inquiry Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>In progress</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Object Connector Process</fullName>
        <description>For migrating history Cases. explicitly created for the linkage of Task. Requested by migration team James.</description>
        <isActive>true</isActive>
        <values>
            <fullName>2nd Final Position Released</fullName>
        </values>
        <values>
            <fullName>Awaiting MB</fullName>
        </values>
        <values>
            <fullName>Call waiting</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed %28Final%29</fullName>
        </values>
        <values>
            <fullName>Final Position Released</fullName>
        </values>
        <values>
            <fullName>Finished</fullName>
        </values>
        <values>
            <fullName>Have tracked</fullName>
        </values>
        <values>
            <fullName>In progress</fullName>
        </values>
        <values>
            <fullName>Insufficient Document</fullName>
        </values>
        <values>
            <fullName>Investigating</fullName>
        </values>
        <values>
            <fullName>Need track</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Reopened</fullName>
        </values>
        <values>
            <fullName>Requires Manager Review</fullName>
        </values>
        <values>
            <fullName>Suspended</fullName>
        </values>
        <values>
            <fullName>Waiting Process</fullName>
        </values>
        <values>
            <fullName>Waiting for Reply</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Accident_Location_Details__c</fullName>
        <label>Accident Location Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accident_Location__c</fullName>
        <label>Accident Location</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Accident_Place__c</fullName>
        <label>Accident Place</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_Code__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Activity Code for the case 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Activity Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Aftersales_Manager__c</fullName>
        <formula>( Case_Dealer__r.Dealer_Aftersales_Manager_Email__c )</formula>
        <label>Aftersales Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternative_Transport_Method__c</fullName>
        <label>Alternative Transport Method</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Best_Contact_Time__c</fullName>
        <label>Best Contact Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Book_In_Date__c</fullName>
        <label>Book In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLB_Used__c</fullName>
        <description>For wholesale user.</description>
        <label>CLB Used</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLB__c</fullName>
        <label>Customer Loyalty Budget</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMS_Contract_No__c</fullName>
        <formula>'CMS Contract No'</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMS Contract No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Manager__c</fullName>
        <formula>( Case_Dealer__r.Dealer_CRM_Manager_Email__c )</formula>
        <label>CRM Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Duration__c</fullName>
        <label>Call Duration</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CarBrandOne__c</fullName>
        <label>Car Brand 1</label>
        <picklist>
            <picklistValues>
                <fullName>MB Saloon Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB Business Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRUCKS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CarBrandThree__c</fullName>
        <label>Car Brand 3</label>
        <picklist>
            <picklistValues>
                <fullName>MB Saloon Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB Business Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRUCKS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CarBrandTwo__c</fullName>
        <label>Car Brand 2</label>
        <picklist>
            <picklistValues>
                <fullName>MB Saloon Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB Business Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRUCKS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CarClassOne__c</fullName>
        <label>Car Class 1</label>
        <picklist>
            <controllingField>CarBrandOne__c</controllingField>
            <picklistValues>
                <fullName>A-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLK-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E Coupe Sport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class Cabriolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLK-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ML-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLK-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concept Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB100 (Not Current Series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPRINTER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIANO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VITO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VARIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MARCO POLO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAYBACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G65 AMG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CarClassThree__c</fullName>
        <label>Car Class 3</label>
        <picklist>
            <controllingField>CarBrandThree__c</controllingField>
            <picklistValues>
                <fullName>A-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLK-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E Coupe Sport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class Cabriolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLK-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ML-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLK-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concept Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB100 (Not Current Series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPRINTER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIANO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VITO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VARIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MARCO POLO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAYBACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G65 AMG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CarClassTwo__c</fullName>
        <label>Car Class 2</label>
        <picklist>
            <controllingField>CarBrandTwo__c</controllingField>
            <picklistValues>
                <fullName>A-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLK-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E Coupe Sport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class Cabriolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLK-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ML-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLK-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concept Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB100 (Not Current Series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPRINTER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIANO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VITO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VARIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MARCO POLO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAYBACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G65 AMG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CarModelOne__c</fullName>
        <label>Car Model 1</label>
        <picklist>
            <controllingField>CarClassOne__c</controllingField>
            <picklistValues>
                <fullName>A160</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A180</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A 180 Hatchback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A 200 Hatchback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A 260 Hatchback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 Dynamic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 BlueEFFICIENCY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 Avantgarde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 Luxury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 Luxury Night Special Edition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C 200 Entry Elegance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C 280 Avantgarde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C230 Avantgarde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 CGI Avantgarde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 CGI Elegance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C280 Avantgarde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200K Elegance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200K Avantgarde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200K Sport (Not Current Series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C260 Avantgarde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 Elegance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C240E Elegance (Not Current Series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C240A Avantgarde (Not Current Series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C230 Elegance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C280</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C240 (Not Current Series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C230</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C260 CGI Avantgarde (CKD)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CarModelThree__c</fullName>
        <label>Car Model 3</label>
        <picklist>
            <controllingField>CarClassThree__c</controllingField>
            <picklistValues>
                <fullName>A160</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A180</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A 180 Hatchback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A 200 Hatchback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A 260 Hatchback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 Dynamic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 BlueEFFICIENCY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 Avantgarde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 Luxury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 Luxury Night Special Edition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C 200 Entry Elegance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C 280 Avantgarde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C230 Avantgarde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 CGI Avantgarde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 CGI Elegance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C280 Avantgarde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200K Elegance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200K Avantgarde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200K Sport (Not Current Series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C260 Avantgarde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 Elegance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C240E Elegance (Not Current Series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C240A Avantgarde (Not Current Series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C230 Elegance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C280</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C240 (Not Current Series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C230</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C260 CGI Avantgarde (CKD)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CarModelTwo__c</fullName>
        <label>Car Model 2</label>
        <picklist>
            <controllingField>CarClassTwo__c</controllingField>
            <picklistValues>
                <fullName>A160</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A180</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A 180 Hatchback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A 200 Hatchback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A 260 Hatchback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 Dynamic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 BlueEFFICIENCY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 Avantgarde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 Luxury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 Luxury Night Special Edition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C 200 Entry Elegance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C 280 Avantgarde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C230 Avantgarde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 CGI Avantgarde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 CGI Elegance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C280 Avantgarde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200K Elegance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200K Avantgarde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200K Sport (Not Current Series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C260 Avantgarde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 Elegance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C240E Elegance (Not Current Series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C240A Avantgarde (Not Current Series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C230 Elegance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C280</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C240 (Not Current Series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C230</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C260 CGI Avantgarde (CKD)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Car_Model__c</fullName>
        <description>The field is used by wholesale for reporting.</description>
        <label>Car Model</label>
        <picklist>
            <controllingField>Vehicle_Class__c</controllingField>
            <picklistValues>
                <fullName>A260</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL450</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL350</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLK200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLK350</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLK280</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLK230</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLK200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLK240</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLK280</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLK350</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLK230</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG E63</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG S65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG ML55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG G55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG ML63</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG C63</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG E55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG S55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG CLS63</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG SL63</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG SLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS350</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS500</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>